# akatsuki-cli

./: .env.example  .gitignore  README.md  pyproject.toml
akatsuki_cli/: __main__.py
akatsuki_cli/commands/: vault.py
