[project]
name = "akatsuki-cli"
authors = [
    {name = "Akatsuki Team", email = "support@akatsuki.gg"},
]
description = "A CLI interface for Akatsuki engineering"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["version"]
dependencies = [
    "hvac",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["akatsuki_cli"]

[tool.hatch.version]
path = "akatsuki_cli/__about__.py"

[project.scripts]
akatsuki = "akatsuki_cli.__main__:main"
